Allow displaying of title when hovered over inline SVG.

However this blocks displaying of title when SVG is
imported as an object.

BUG=761827

Change-Id: I813705019a049768762f33f40595afa63ff59b27